[package]
name = "no-spam"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
google-gmail1 = "*"
hyper = "^0.14"
hyper-rustls = "^0.22"
serde = "^1.0"
serde_json = "^1.0"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
yup-oauth2 = "^5.0"